Aggiornamento v5.6: Internationalization improvements, translation fixes, update Privacy Policy title and removal of 'Rules' section

--- a/Frontend/public/impostazioni.html
+++ b/Frontend/public/impostazioni.html
@@ -317,25 +317,7 @@
                         </div>
                     </div>
 
-                    <!-- Le Regole -->
-                    <div class="settings-group !mb-0">
-                        <div class="settings-item accordion-header" data-target="rules-gold">
-                            <div class="glass-shine"></div>
-                            <div class="flex items-center">
-                                <div class="settings-icon-box icon-amber">
-                                    <span class="material-symbols-outlined">verified</span>
-                                </div>
-                                <div class="settings-label-group">
-                                    <span class="settings-title" data-t="rules_title">Le regole da ricordare</span>
-                                </div>
-                            </div>
-                            <span
-                                class="material-symbols-outlined settings-chevron transition-transform duration-300">expand_more</span>
-                        </div>
-                        <div id="rules-gold" class="accordion-content hidden border-t border-white/5">
-                            <div id="rules-gold-text-placeholder"></div>
-                        </div>
-                    </div>
+
                 </div>
             </div>
 
@@ -364,9 +346,8 @@
                                     <span class="material-symbols-outlined">policy</span>
                                 </div>
                                 <div class="settings-label-group">
-                                    <span class="settings-title" data-t="privacy_policy_title">Privacy Policy</span>
-                                    <span class="settings-subtitle" data-t="privacy_policy_subtitle">Trattamento
-                                        dati e diritti</span>
+                                    <span class="settings-title" data-t="privacy_policy_title">Informativa sul
+                                        trattamento dei dati</span>
                                 </div>
                             </div>
                             <span
