--- a/Frontend/public/dettaglio_account_privato.html
+++ b/Frontend/public/dettaglio_account_privato.html
@@ -228,9 +228,8 @@
                             <span class="view-label text-white/40 ml-1">Utente</span>
                             <div
                                 class="flex items-center bg-slate-500/5 rounded-xl border border-white/5 overflow-hidden backdrop-blur-sm border-glow">
-                                <input id="detail-username" type="password" readonly
-                                    class="flex-1 bg-transparent border-none h-12 px-4 text-sm font-medium text-white focus:ring-0 placeholder-white/20"
-                                    value="">
+                                <input id="detail-username" type="text" readonly
+                                    class="titanium-shield flex-1 bg-transparent border-none h-12 px-4 text-sm font-medium text-white focus:ring-0 placeholder-white/20">
                                 <button
                                     class="copy-btn p-3 text-white/40 hover:text-white transition-colors border-l border-white/5">
                                     <span class="material-symbols-outlined text-base">content_copy</span>
@@ -243,9 +242,8 @@
                             <span class="view-label text-white/40 ml-1">Account / Codice</span>
                             <div
                                 class="flex items-center bg-slate-500/5 rounded-xl border border-white/5 overflow-hidden backdrop-blur-sm border-glow">
-                                <input id="detail-account" type="password" readonly
-                                    class="flex-1 bg-transparent border-none h-12 px-4 text-sm font-medium text-white focus:ring-0 placeholder-white/20"
-                                    value="">
+                                <input id="detail-account" type="text" readonly
+                                    class="titanium-shield flex-1 bg-transparent border-none h-12 px-4 text-sm font-medium text-white focus:ring-0 placeholder-white/20">
                                 <button
                                     class="copy-btn p-3 text-white/40 hover:text-white transition-colors border-l border-white/5">
                                     <span class="material-symbols-outlined text-base">content_copy</span>
@@ -258,9 +256,8 @@
                             <span class="view-label text-white/40 ml-1">Password</span>
                             <div
                                 class="flex items-center bg-slate-500/5 rounded-xl border border-white/5 overflow-hidden backdrop-blur-sm border-glow">
-                                <input id="detail-password" type="password" readonly
-                                    class="flex-1 bg-transparent border-none h-12 px-4 text-sm font-mono tracking-wider text-white focus:ring-0 placeholder-white/20 uppercase"
-                                    value="">
+                                <input id="detail-password" type="text" readonly
+                                    class="titanium-shield flex-1 bg-transparent border-none h-12 px-4 text-sm font-mono tracking-wider text-white focus:ring-0 placeholder-white/20 uppercase">
                                 <button id="toggle-password"
                                     class="p-3 text-white/40 hover:text-white border-l border-white/5">
                                     <span class="material-symbols-outlined text-base">visibility</span>
