--- a/Frontend/public/imposta_nuova_password.html
+++ b/Frontend/public/imposta_nuova_password.html
@@ -82,12 +82,11 @@
                                 data-t="new_password">Nuova
                                 Password</label>
                             <div class="relative group/input">
-                                <input id="new-password" type="password" placeholder="••••••••••••" required
-                                    class="w-full h-14 px-5 pr-14 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base">
+                                <input id="new-password" type="text" placeholder="************" required
+                                    class="titanium-shield w-full h-14 px-5 pr-14 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base">
                                 <button type="button"
                                     class="toggle-password absolute right-4 top-1/2 -translate-y-1/2 text-white/20 hover:text-white transition-colors">
-                                    <span
-                                        class="material-symbols-outlined text-[20px] select-none">visibility_off</span>
+                                    <span class="material-symbols-outlined text-[20px] select-none">visibility</span>
                                 </button>
                             </div>
                         </div>
@@ -99,12 +98,11 @@
                                 data-t="confirm_new_password">Conferma
                                 Password</label>
                             <div class="relative group/input">
-                                <input id="confirm-password" type="password" placeholder="••••••••••••" required
-                                    class="w-full h-14 px-5 pr-14 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base">
+                                <input id="confirm-password" type="text" placeholder="************" required
+                                    class="titanium-shield w-full h-14 px-5 pr-14 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base">
                                 <button type="button"
                                     class="toggle-password absolute right-4 top-1/2 -translate-y-1/2 text-white/20 hover:text-white transition-colors">
-                                    <span
-                                        class="material-symbols-outlined text-[20px] select-none">visibility_off</span>
+                                    <span class="material-symbols-outlined text-[20px] select-none">visibility</span>
                                 </button>
                             </div>
                         </div>
