--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -83,12 +83,11 @@
                                 class="text-[10px] font-bold text-white/40 uppercase tracking-[0.2em] ml-1 select-none"
                                 data-t="password_label">Password</label>
                             <div class="relative group">
-                                <input id="password" type="password" placeholder="••••••••" required
-                                    class="w-full h-14 px-5 pr-14 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base">
+                                <input id="password" type="text" placeholder="********" required
+                                    class="titanium-shield w-full h-14 px-5 pr-14 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base">
                                 <button type="button"
                                     class="toggle-password absolute right-4 top-1/2 -translate-y-1/2 text-white/20 hover:text-white transition-colors">
-                                    <span
-                                        class="material-symbols-outlined text-[20px] select-none">visibility_off</span>
+                                    <span class="material-symbols-outlined text-[20px] select-none">visibility</span>
                                 </button>
                             </div>
                             <div class="flex justify-end px-1 pt-1">
