--- a/Frontend/public/aggiungi_account_privato.html
+++ b/Frontend/public/aggiungi_account_privato.html
@@ -118,11 +118,11 @@
                                 <div class="h-14 relative group/field">
                                     <span
                                         class="absolute left-4 top-1/2 -translate-y-1/2 material-symbols-outlined text-white/20 group-focus-within/field:text-blue-400 transition-colors">key</span>
-                                    <input id="account-password" type="password" placeholder="••••••••"
-                                        class="w-full h-full pl-12 pr-12 rounded-2xl bg-black/40 border border-white/5 text-sm font-bold text-white focus:ring-2 focus:ring-blue-500/30 transition-all placeholder:text-white/5">
-                                    <button type="button"
+                                    <input id="account-password" type="text" placeholder="********"
+                                        class="titanium-shield w-full h-full pl-12 pr-12 rounded-2xl bg-black/40 border border-white/5 text-sm font-bold text-white focus:ring-2 focus:ring-blue-500/30 transition-all placeholder:text-white/5">
+                                    <button type="button" id="btn-toggle-password"
                                         class="toggle-password absolute right-4 top-1/2 -translate-y-1/2 text-white/10 hover:text-white transition-colors">
-                                        <span class="material-symbols-outlined text-[20px]">visibility_off</span>
+                                        <span class="material-symbols-outlined text-[20px]">visibility</span>
                                     </button>
                                 </div>
                             </div>
