--- a/Frontend/public/aggiungi_nuova_azienda.html
+++ b/Frontend/public/aggiungi_nuova_azienda.html
@@ -14,6 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
         rel="stylesheet" />
+    <!-- Titanium CSS -->
+    <link rel="stylesheet" href="assets/css/titanium.css">
 
     <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
@@ -555,12 +557,13 @@
                                         class="w-full h-10 px-3 rounded-lg text-sm focus:outline-none"
                                         placeholder="pec@azienda.it" />
                                     <div class="relative">
-                                        <input id="email-pec-password" type="password"
-                                            class="w-full h-10 pl-3 pr-10 rounded-lg text-sm focus:outline-none"
+                                        <input id="email-pec-password" type="text"
+                                            class="titanium-shield w-full h-10 pl-3 pr-10 rounded-lg text-sm focus:outline-none placeholder-gray-600"
                                             placeholder="Password PEC" />
                                         <button type="button" onclick="togglePasswordVisibility('email-pec-password')"
                                             class="absolute right-2 top-1/2 -translate-y-1/2 text-gray-500 hover:text-white p-1">
-                                            <span class="material-symbols-outlined text-[18px]">visibility</span>
+                                            <span id="icon-email-pec-password"
+                                                class="material-symbols-outlined text-[18px]">visibility</span>
                                         </button>
                                     </div>
                                     <textarea id="email-pec-note"
@@ -583,13 +586,14 @@
                                         class="w-full h-10 px-3 rounded-lg text-sm focus:outline-none"
                                         placeholder="amministrazione@azienda.it" />
                                     <div class="relative">
-                                        <input id="email-amministrazione-password" type="password"
-                                            class="w-full h-10 pl-3 pr-10 rounded-lg text-sm focus:outline-none"
+                                        <input id="email-amministrazione-password" type="text"
+                                            class="titanium-shield w-full h-10 pl-3 pr-10 rounded-lg text-sm focus:outline-none placeholder-gray-600"
                                             placeholder="Password" />
                                         <button type="button"
                                             onclick="togglePasswordVisibility('email-amministrazione-password')"
                                             class="absolute right-2 top-1/2 -translate-y-1/2 text-gray-500 hover:text-white p-1">
-                                            <span class="material-symbols-outlined text-[18px]">visibility</span>
+                                            <span id="icon-email-amministrazione-password"
+                                                class="material-symbols-outlined text-[18px]">visibility</span>
                                         </button>
                                     </div>
                                 </div>
@@ -609,13 +613,14 @@
                                         class="w-full h-10 px-3 rounded-lg text-sm focus:outline-none"
                                         placeholder="personale@azienda.it" />
                                     <div class="relative">
-                                        <input id="email-personale-password" type="password"
-                                            class="w-full h-10 pl-3 pr-10 rounded-lg text-sm focus:outline-none"
+                                        <input id="email-personale-password" type="text"
+                                            class="titanium-shield w-full h-10 pl-3 pr-10 rounded-lg text-sm focus:outline-none placeholder-gray-600"
                                             placeholder="Password" />
                                         <button type="button"
                                             onclick="togglePasswordVisibility('email-personale-password')"
                                             class="absolute right-2 top-1/2 -translate-y-1/2 text-gray-500 hover:text-white p-1">
-                                            <span class="material-symbols-outlined text-[18px]">visibility</span>
+                                            <span id="icon-email-personale-password"
+                                                class="material-symbols-outlined text-[18px]">visibility</span>
                                         </button>
                                     </div>
                                 </div>
@@ -635,13 +640,14 @@
                                         class="w-full h-10 px-3 rounded-lg text-sm focus:outline-none"
                                         placeholder="manutenzione@azienda.it" />
                                     <div class="relative">
-                                        <input id="email-manutenzione-password" type="password"
-                                            class="w-full h-10 pl-3 pr-10 rounded-lg text-sm focus:outline-none"
+                                        <input id="email-manutenzione-password" type="text"
+                                            class="titanium-shield w-full h-10 pl-3 pr-10 rounded-lg text-sm focus:outline-none placeholder-gray-600"
                                             placeholder="Password" />
                                         <button type="button"
                                             onclick="togglePasswordVisibility('email-manutenzione-password')"
                                             class="absolute right-2 top-1/2 -translate-y-1/2 text-gray-500 hover:text-white p-1">
-                                            <span class="material-symbols-outlined text-[18px]">visibility</span>
+                                            <span id="icon-email-manutenzione-password"
+                                                class="material-symbols-outlined text-[18px]">visibility</span>
                                         </button>
                                     </div>
                                 </div>
@@ -662,13 +668,14 @@
                                         class="w-full h-10 px-3 rounded-lg text-sm focus:outline-none"
                                         placeholder="attrezzatura@azienda.it" />
                                     <div class="relative">
-                                        <input id="email-attrezzatura-password" type="password"
-                                            class="w-full h-10 pl-3 pr-10 rounded-lg text-sm focus:outline-none"
+                                        <input id="email-attrezzatura-password" type="text"
+                                            class="titanium-shield w-full h-10 pl-3 pr-10 rounded-lg text-sm focus:outline-none placeholder-gray-600"
                                             placeholder="Password" />
                                         <button type="button"
                                             onclick="togglePasswordVisibility('email-attrezzatura-password')"
                                             class="absolute right-2 top-1/2 -translate-y-1/2 text-gray-500 hover:text-white p-1">
-                                            <span class="material-symbols-outlined text-[18px]">visibility</span>
+                                            <span id="icon-email-attrezzatura-password"
+                                                class="material-symbols-outlined text-[18px]">visibility</span>
                                         </button>
                                     </div>
                                 </div>
@@ -688,13 +695,14 @@
                                         class="w-full h-10 px-3 rounded-lg text-sm focus:outline-none"
                                         placeholder="magazzino@azienda.it" />
                                     <div class="relative">
-                                        <input id="email-magazzino-password" type="password"
-                                            class="w-full h-10 pl-3 pr-10 rounded-lg text-sm focus:outline-none"
+                                        <input id="email-magazzino-password" type="text"
+                                            class="titanium-shield w-full h-10 pl-3 pr-10 rounded-lg text-sm focus:outline-none placeholder-gray-600"
                                             placeholder="Password" />
                                         <button type="button"
                                             onclick="togglePasswordVisibility('email-magazzino-password')"
                                             class="absolute right-2 top-1/2 -translate-y-1/2 text-gray-500 hover:text-white p-1">
-                                            <span class="material-symbols-outlined text-[18px]">visibility</span>
+                                            <span id="icon-email-magazzino-password"
+                                                class="material-symbols-outlined text-[18px]">visibility</span>
                                         </button>
                                     </div>
                                 </div>
@@ -747,50 +755,17 @@
 
     <!-- Scripts -->
     <script>
+        // Le funzioni di preview e toggle password sono gestite da assets/js/aggiungi_azienda.js
         function toggleSection(id) {
             const el = document.getElementById(id);
             const arrow = document.getElementById('arrow-' + id);
+            if (!el) return;
             if (el.classList.contains('hidden')) {
                 el.classList.remove('hidden');
                 if (arrow) arrow.style.transform = 'rotate(180deg)';
             } else {
                 el.classList.add('hidden');
                 if (arrow) arrow.style.transform = 'rotate(0deg)';
-            }
-        }
-
-        function togglePasswordVisibility(id) {
-            const input = document.getElementById(id);
-            if (input.type === 'password') input.type = 'text';
-            else input.type = 'password';
-        }
-
-        // Preview Helpers (Used by JS but simplified here for inline)
-        function previewLogo(input) {
-            if (input.files && input.files[0]) {
-                const reader = new FileReader();
-                reader.onload = function (e) {
-                    const img = document.getElementById('logo-preview');
-                    const ph = document.getElementById('logo-placeholder');
-                    img.src = e.target.result;
-                    img.classList.remove('hidden');
-                    ph.classList.add('hidden');
-                }
-                reader.readAsDataURL(input.files[0]);
-            }
-        }
-
-        function previewReferentePhoto(input) {
-            if (input.files && input.files[0]) {
-                const reader = new FileReader();
-                reader.onload = function (e) {
-                    const img = document.getElementById('referente-photo-preview');
-                    const ph = document.getElementById('referente-photo-placeholder');
-                    img.src = e.target.result;
-                    img.classList.remove('hidden');
-                    ph.classList.add('hidden');
-                }
-                reader.readAsDataURL(input.files[0]);
             }
         }
     </script>
