--- a/Frontend/public/modifica_account_privato.html
+++ b/Frontend/public/modifica_account_privato.html
@@ -13,6 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
         rel="stylesheet" />
+    <!-- Titanium CSS -->
+    <link rel="stylesheet" href="assets/css/titanium.css">
     <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <script>
@@ -199,13 +201,13 @@
                                 <div class="relative">
                                     <span
                                         class="absolute left-3 top-1/2 -translate-y-1/2 text-gray-500 material-symbols-outlined text-[20px]">key</span>
-                                    <input id="account-password" type="password"
-                                        class="w-full h-12 pl-10 pr-12 rounded-xl text-sm font-medium focus:outline-none font-mono tracking-wider"
-                                        placeholder="••••••••" />
+                                    <input id="account-password" type="text"
+                                        class="titanium-shield w-full h-12 pl-10 pr-12 rounded-xl text-sm font-medium focus:outline-none font-mono tracking-wider"
+                                        placeholder="********" />
                                     <button type="button"
-                                        onclick="const i = document.getElementById('account-password'); i.type = i.type==='password'?'text':'password'; this.querySelector('span').textContent = i.type==='password'?'visibility_off':'visibility';"
+                                        onclick="const i = document.getElementById('account-password'); i.classList.toggle('titanium-shield'); this.querySelector('span').textContent = i.classList.contains('titanium-shield')?'visibility':'visibility_off';"
                                         class="absolute right-2 top-1/2 -translate-y-1/2 p-1.5 text-gray-400 hover:text-white transition-colors rounded-lg hover:bg-white/5">
-                                        <span class="material-symbols-outlined text-[18px]">visibility_off</span>
+                                        <span class="material-symbols-outlined text-[18px]">visibility</span>
                                     </button>
                                 </div>
                             </div>
