--- a/Frontend/public/registrati.html
+++ b/Frontend/public/registrati.html
@@ -112,13 +112,12 @@
                                 data-t="password_label_reg">Chiave
                                 d'Accesso</label>
                             <div class="relative group/input">
-                                <input id="password" type="password" placeholder="Min. 8 caratteri" required
-                                    class="w-full h-14 px-5 pr-14 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base"
+                                <input id="password" type="text" placeholder="Min. 8 caratteri" required
+                                    class="titanium-shield w-full h-14 px-5 pr-14 rounded-xl border border-white/10 bg-black/40 text-white shadow-inner focus:ring-2 focus:ring-blue-500/50 transition-all placeholder:text-white/10 text-base"
                                     data-t="password_placeholder_reg">
                                 <button type="button"
                                     class="toggle-password absolute right-4 top-1/2 -translate-y-1/2 text-white/20 hover:text-white transition-colors">
-                                    <span
-                                        class="material-symbols-outlined text-[20px] select-none">visibility_off</span>
+                                    <span class="material-symbols-outlined text-[20px] select-none">visibility</span>
                                 </button>
                             </div>
                         </div>
