--- a/Frontend/public/impostazioni.html
+++ b/Frontend/public/impostazioni.html
@@ -39,7 +39,7 @@
                             <div class="text-center">
                                 <h3 id="user-name-settings" class="user-name-title" data-t="loading">Caricamento...</h3>
                             </div>
-                            <button onclick="window.location.href='dati_anagrafici_privato.html'"
+                            <button onclick="window.location.href='profilo_privato.html'"
                                 class="btn-titanium-primary relative overflow-hidden"
                                 style="box-shadow: none; filter: none;" data-t="manage_account_data">
                                 <div class="glass-shine"></div>
